# inventory-manager

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
API_handler/: device.py  gudid_api.py
InventoryManager/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  apps.py  forms.py  gudid.py  models.py  response.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_rename_itemmodel_item.py  0003_alter_item_price.py  0004_alter_item_recv_qty.py  0005_item_par_level.py  0006_item_total_cost_currency_alter_item_total_cost.py  0007_item_price_currency_alter_item_price.py  0008_item_external_url_alter_item_dbo_vend_name_and_more.py  0009_remove_item_expr1016_item_dbo_cc_name.py  0010_remove_item_expr1017_item_acct_no_item_rcv_date.py  0011_rename_item_order.py  0012_item_remove_order_descr_remove_order_external_url_and_more.py  0013_itemtransaction_parleveltransaction.py  0013_rename_item_order_order_item.py  0014_device_item_current_count_item_device.py  0015_device_device_name_device_manufacturer_item_exp_date.py  0016_device_current_count.py
core/templatetags/: device_details_extras.py  generic_extras.py  item_details_extras.py  item_transactions_extras.py  order_details_extras.py
docs/: conf.py  index.rst
docs/modules/: about-author.rst  admin.rst  forms.rst  models.rst  urls.rst  utils.rst  views.rst
stats/: basic_stats.py
stats/data/: PV_ANGIOGRAPHY.xlsx  RAD_NEURO_ANGIOGRAPHY.xlsx  mfr_cat.csv
(+15 files in other folders)
