[project]
name = "inventorymanager"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "asgiref==3.8.1",
    "babel==2.17.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.1",
    "defusedxml==0.7.1",
    "diff-match-patch==20241021",
    "django==5.1.7",
    "django-bootstrap-icons==0.9.0",
    "django-bootstrap5==25.1",
    "django-data-browser==4.2.10",
    "django-money==3.5.3",
    "django-widget-tweaks==1.5.0",
    "et-xmlfile==2.0.0",
    "gunicorn==23.0.0",
    "hyperlink==21.0.0",
    "idna==3.10",
    "numpy==2.2.4",
    "openpyxl==3.1.5",
    "packaging==24.2",
    "pandas==2.2.3",
    "py-moneyed==3.0",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.3",
    "setuptools==78.1.0",
    "simplejson==3.20.1",
    "six==1.17.0",
    "sqlparse==0.5.3",
    "tablib==3.8.0",
    "typing-extensions==4.13.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "whitenoise==6.9.0",
    "xlsxwriter==3.2.2",
]
